Adminer dev:
Remove duplicate columns from select (bug #670)
MariaDB: Fix link to status variable doc (bug #658)

Adminer 5.0.0 (released 2025-03-07):
Speed up with disabled output buffering
Allow creating generated columns (bug #857)
Don't autofocus computed fields in insert form
Skip generated columns in multi-edit (bug #882)
MySQL: Display generated value in table structure
MySQL: Drop support for MySQL 4
PostgreSQL: Compute size of all databases (bug #881)
PostgreSQL: Do not alter indexes with expressions
PostgreSQL: Fix export of indexes with expressions (bug #768)
PostgreSQL: Display ENUM types
PostgreSQL: Export ENUM types (bug #587)
PostgreSQL: Display ? instead of -1 rows in table overview (bug #883)
PostgreSQL: Show accessible databases to non-owners (regression from 4.9.1)
PostgreSQL: Skip editing generated columns
PostgreSQL, MS SQL, Oracle: Hide table actions for information_schema
SQLite: Support CHECK constraint
SQLite: Support generated columns
SQLite: Add command Check tables
SQLite: Display all rows of variable values
SQLite: Remove support for SQLite version 2
MS SQL: Support export (bug #480)
MS SQL: Display foreign keys ON UPDATE and ON DELETE
MS SQL: Support computed columns
MS SQL: Fix CSV import (bug #859)
MS SQL: Fix altering foreign key
MS SQL PDO: Support offset
MS SQL: Remove support for MSSQL extension
MS SQL: Add support for PDO_SQLSRV extension
MS SQL: Link help from sys tables
MS SQL: Fix highlighting columns as primary keys
MongoDB: Remove support for deprecated extension mongo
Elasticsearch: Fix text search on boolean fields
Plugins: Adminer code is now in a namespace

Adminer 4.17.1 (released 2025-02-25):
MySQL: Fix typo in the date type (regression from 4.17.0)

Adminer 4.17.0 (released 2025-02-24):
Hide index column options by default
Offer original values in multi-row editing (regression from 4.16.0)
Print SQL errors as comments in export (regression from 3.2.0)
MySQL, PostgreSQL, MS SQL: Support CHECK constraint